--- a/assets/css/legacy.scss
+++ b/assets/css/legacy.scss
@@ -2,7 +2,7 @@
  * Custom styles for Jorani
  * @copyright  Copyright (c) Fadzrul Aiman
  * @license    http://opensource.org/licenses/AGPL-3.0 AGPL-3.0
- * @link       https://github.com/bbalet/jorani
+ * @link       https://github.com/fadzrulaiman/SKG-LMS
  * @since      1.0.1
  */
 
